[Upd] Update docker image builds and GH actions.